autonomie/static/css/main.css
/* ... */
  .btn.secondary-action {
    padding: 4px 8px; }
  .btn.tertiary-action {
    padding: 2px 4px; }
  .btn.btn-circle {
    width: 30px;
    height: 30px;
    text-align: center;
    padding: 5px 0;
    font-size: 14px;
    line-height: 1.428571429;
    border-radius: 15px; }
  .btn.btn-circle.btn-lg {
    width: 50px;
    height: 50px;
    padding: 10px 16px;
    font-size: 18px;
    line-height: 1.33;
    border-radius: 25px; }
  .btn.btn-circle.btn-xl {
    width: 70px;
    height: 70px;
    padding: 10px 16px;
    font-size: 24px;
    line-height: 1.33;
    border-radius: 35px; }

.btn-nostyle {
  border: none;
  border-radius: 2px;
  background-color: transparent;
  color: inherit; }
  .btn-nostyle:hover {
    background-color: rgba(255, 255, 255, 0.1); }

.login-dialog .modal-body .icon {
  font-size: 8rem;
  color: #999;
  text-align: center; }

.loginbox {
  padding: 15px 20px 20px 20px;
  background-color: #fff;
  height: 80%;
  text-align: center;
  max-width: 350px;
  margin: 20px auto auto auto;
  border-top: 1px solid #e7eaec; }
  .loginbox img-div {
    margin-bottom: 15px;
    text-align: center; }
  .loginbox img {
    max-height: 250px;
    max-width: 100%;
    height: auto; }
  .loginbox h1 {
    text-align: center; }
  .loginbox #authentication {
    max-width: 350px;
    text-align: center; }
    .loginbox #authentication label {
      font-weight: normal;
      font-size: 0.9rem; }
    .loginbox #authentication button {
      display: block;
      width: 100%;
      font-size: 1rem; }
    .loginbox #authentication .checkbox {
      margin-top: 0px; }
    .loginbox #authentication #req-deformField4 {
      height: 0px;
      margin: 0;
      padding: 0;
      visible: false;
      display: none; }
    .loginbox #authentication input[type=password] {
      margin-bottom: 4px; }

/*
 * Custom icon definition reusing fontawesome icons
 */
.icon-success:before {
  content: "\f058"; }

.icon-danger:before, .icon-warning:before {
  content: "\f071"; }

html {
  font-size: 16px; }

body {
  padding: 0px;
  overflow: auto; }

.pagetitle {
  padding: 25px 0 30px 40px;
  border-bottom: 1px solid #d5d5d6;
  text-align: left;
  background-color: #fff;
  overflow: hidden;
  color: #7f888f; }
  .pagetitle h2 {
    float: left;
    font-size: 1.5rem;
    line-height: 15px;
    margin: 0px;
    font-family: "sans serif"; }

.page-content-wrapper {
  background-color: #f5f5f6;
  min-height: 100vh; }

.page-header-block {
  background-color: #fff;
  padding: 20px;
  margin-bottom: 15px; }

.page-block {
  padding: 10px 5px;
  margin: 10px 0px 7px 0px;
  background-color: #fff; }

blockquote {
  font-size: 0.9rem; }

.estimation-view .page-content-wrapper {
  background-color: #f8f8f8; }

footer#page-footer-block {
  background-color: #2f4050;
  padding: 15px 40px 20px 40px;
  color: #fff; }

/* Listes */
.list-group .list-group-item {
  border: none;
  border-bottom: 1px solid #dedede;
  background-color: transparent; }

.primary-text-lg {
  color: #2196f3;
  font-size: 4rem;
  font-weight: 100;
  font-stretch: semi-condensed; }

.ui-button-primary .ui-icon, .btn-primary .ui-icon {
  background-image: url("theme/images/ui-icons_f6cf3b_256x240.png"); }

#actionmenu {
  padding-left: 5%; }

.message {
  left: 35%;
  max-width: 30%;
  position: relative;
  text-align: center; }

.help-block {
  font-size: 0.8rem;
  font-style: italic; }

/* Project page */
.section-header {
  padding: 6px 2px;
  font-size: 0.9rem; }
  .section-header a {
    padding-left: 10px;
    padding-bottom: 2px;
    padding-top: 2px;
    color: #111;
    font-weight: normal;
    vertical-align: middle;
    font-size: 1rem;
    text-transform: capitalize; }
  .section-header a:hover {
    text-decoration: none;
    color: #333;
    font-weight: bold;
    background-color: #f5f5f5; }

.section-content {
  margin: 4px;
  margin-left: 27px;
  padding-left: 10px;
  border-left: 2px solid #d1d1d1; }

h3.floatted {
  font-size: 1rem;
  font-weight: 100; }

/* Box used to display ajax calls success or errors */
#messageboxes {
  position: fixed;
  bottom: 0px;
  left: 50px;
  z-index: 2000; }

.inline-element {
  display: inline-block; }

.accordion-heading a {
  color: #555; }

.accordion-body.in:hover {
  overflow: visible; }

/* Bootstrap overrides */
.input-group input:focus {
  z-index: auto; }

.navbar-form button, .navbar-form input, .navbar-form select {
  margin-top: 5px;
  float: left;
  margin-right: 3px; }

.nav-tabs > li.active > a {
  font-weight: bold;
  text-decoration: underline; }

header .navbar {
  margin-bottom: 0px; }

header .navbar li:hover {
  background-color: #3c3c3c; }

header .navbar {
  padding-left: 15%; }

header .navbar .nav > li > a {
  padding: 10px 5px;
  margin: 0px 10px; }

.tab-content {
  padding: 0px 10px; }

.tab-pane {
  padding: 10px 10px; }

.clickable-row {
  cursor: pointer; }

.form-inline .form-group {
  vertical-align: top;
  margin-bottom: 3px; }

.modal input[name=altdate], .modal input[name=date] {
  z-index: 1100;
  position: relative; }

/* Affichage html de la sortie pdf des documents */
.task_view img {
  max-width: 100%;
  height: auto; }

/* Affichage d'un select2 */
.form-control.select2-container {
  height: auto !important;
  padding: 0; }

.collapse .form-control.select2-container {
  width: 100% !important;
  min-width: 220px; }

/* Affichage d'un loader */
#loading-box {
  position: fixed;
  top: 0px;
  left: 0px;
  z-index: 1500;
  opacity: 0.7;
  background-color: #000;
  font-size: 8rem;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
  color: #fff;
  text-align: center;
  width: 100%;
  height: 100%; }
  #loading-box i {
    position: absolute;
    top: 45%; }

/* Jstree */
.jstree {
  display: inline-block; }

/* Custom close button class */
.large-close {
  font-size: 3rem;
  opacity: 0.4; }
/* ... */

